--- a/bathIndex.html
+++ b/bathIndex.html
@@ -2,6 +2,12 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="styles_ba.css">
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+		<script src="script_ba.js"></script>
 	</head>
 		<body>
 
@@ -20,5 +26,11 @@
 				<a href="upstairsIndex.html"><img src="cactus.png" width="200px" height="200px"></a>
 			</div>
 
+			<div class="soap">
+				<img src="soap.png">
+			</div>
+			<div class="topbub">
+				<img src="topbub.png">
+			</div>
 		</body>
 </html>
