--- a/exitIndex.html
+++ b/exitIndex.html
@@ -2,13 +2,28 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="styles_e.css">
+		<script src="script_e.js"></script>
 	</head>
-		<body>
-			<div class="bg">
+	<body>
+	<h1>Exit Password</h1>
+
+	<p>what were the words hidden around the house?
+
+	Guess "_" for spaces between words to show</p>
+	<form id="hangman">
+	    <input type="text" maxlength="10" minlength="1" name="letter" id="letter" placeholder="Guess a letter" />
+	    <input id="guess" name="guess" type="submit" value="Guess" />
+	    <button id="restart" name="restart" type="button">Restart</button>
+	</form>
+	<ul id="letters"></ul>
+	<p id="man"></p>
+	<p id="output" class="output"></p>
+	<div class="bg">
 				<img src="exit.png" width="1324px" height="768px">
 			</div>
 			<div class="mirror">
 				<a href="livingIndex.html"><img src="mirror.png"></a>
 			</div>
-		</body>
+
+	</body>
 </html>
